--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,1 +1,226 @@
-<p>pages works!</p>
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>ISF</mat-card-title>
+        <mat-card-subtitle>Importer Security Filing</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        Importers are required to file the Importer Security Filing before the vessel departs to U.S. ports.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Air-AMS</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Air Export</mat-card-title>
+        <mat-card-subtitle>Importer Security Filing</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        Importers are required to file the Importer Security Filing before the vessel departs to U.S. ports.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Air-Import</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>CMSQ</mat-card-title>
+        <mat-card-subtitle>Cargo Manifest System Query</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        Importers are required to file the Importer Security Filing before the vessel departs to U.S. ports.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Customs Brokerage</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Ocean Export</mat-card-title>
+        <mat-card-subtitle>Importer Security Filing</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        Importers are required to file the Importer Security Filing before the vessel departs to U.S. ports.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Ocean Import</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Parties</mat-card-title>
+        <mat-card-subtitle>Importer Security Filing</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        Importers are required to file the Importer Security Filing before the vessel departs to U.S. ports.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Reports</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Sea AMS</mat-card-title>
+        <mat-card-subtitle>Importer Security Filing</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        Importers are required to file the Importer Security Filing before the vessel departs to U.S. ports.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Tables</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Track & Trace</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Truck AMS</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Trucking</mat-card-title>
+        <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        All air shipments to U.S. must file the manifest information 4 hours prior to departure.
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>
+
+        </button>
+    </mat-card-actions>
+</mat-card>
+
+
