added home, navigation components

--- a/src/app/pages/air-ams/air-ams.component.html
+++ b/src/app/pages/air-ams/air-ams.component.html
@@ -1,4 +1,4 @@
-<h1 style="max-width: 100%; max-height: 100%">Air AMS Works</h1>
+<!-- <h1 style="max-width: 100%; max-height: 100%">Air AMS Works</h1>
 
 <mat-tab-group mat-align-tabs="start" style="color:pink;">
   <mat-tab label="First" >Content 1</mat-tab>
@@ -7,4 +7,31 @@
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link">Link</button>
+<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button> -->
+
+<div class="outerContainer">
+  <div fxLayout="row" fxLayout.sm="column" fxLayoutGap="10px" class="container">
+    <div fxLayoutAlign="center center" fxFlexOrder="4" fxFlex ="2 1 auto">Aligned center horizontally and center vertically</div>
+    <div fxLayoutAlign="center center" fxFlexOrder="3">2</div>
+    <div fxLayoutAlign="center center" fxFlexOrder="2">3</div>
+    <div fxLayoutAlign="center center" fxFlexOrder="1">4</div>
+  </div>
+</div>
+
+<div class="outerContainer">
+  <div fxLayout="row" fxLayout.lg="column" fxLayoutGap="100px" class="container">
+    <div fxLayoutAlign="center center">5</div>
+    <div fxLayoutAlign="center center">6</div>
+    <div fxLayoutAlign="center center">7</div>
+    <div fxLayoutAlign="center center">8</div>
+  </div>
+</div>
+
+<div class="outerContainer">
+  <div fxLayout="column" fxLayoutGap="100px" class="container">
+    <div fxLayoutAlign="center center">11</div>
+    <div fxLayoutAlign="center center">12</div>
+    <div fxLayoutAlign="center center">13</div>
+    <div fxLayoutAlign="center center">14</div>
+  </div>
+</div>
