--- a/src/app/pages/ocean-export/ocean-export.component.html
+++ b/src/app/pages/ocean-export/ocean-export.component.html
@@ -7,5 +7,5 @@
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link">Link</button>
-<p>ocean-export works!</p>
+<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
+
