--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -44,7 +44,7 @@
     </mat-card-actions>
   </mat-card>
 
-<mat-card class="example-card">
+<mat-card class="example-card col">
   <mat-card-header>
       <mat-card-title>Air-Import</mat-card-title>
       <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
@@ -64,7 +64,7 @@
 
 <div class="container">
 
-<mat-card class="example-card">
+<mat-card class="example-card col">
     <mat-card-header>
         <mat-card-title>CMSQ</mat-card-title>
         <mat-card-subtitle>Cargo Manifest System Query</mat-card-subtitle>
@@ -79,7 +79,7 @@
     </mat-card-actions>
 </mat-card>
 
-<mat-card class="example-card">
+<mat-card class="example-card col">
     <mat-card-header>
         <mat-card-title>Customs Brokerage</mat-card-title>
         <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
@@ -94,7 +94,7 @@
     </mat-card-actions>
 </mat-card>
 
-<mat-card class="example-card">
+<mat-card class="example-card col">
     <mat-card-header>
         <mat-card-title>Ocean Export</mat-card-title>
         <mat-card-subtitle>Importer Security Filing</mat-card-subtitle>
@@ -109,7 +109,7 @@
     </mat-card-actions>
 </mat-card>
 
-<mat-card class="example-card">
+<mat-card class="example-card col">
     <mat-card-header>
         <mat-card-title>Ocean Import</mat-card-title>
         <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
@@ -190,7 +190,7 @@
 </div>
 
 <div class="container">
-<mat-card class="example-card">
+<mat-card class="example-card col">
     <mat-card-header>
         <mat-card-title>Track & Trace</mat-card-title>
         <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
@@ -205,7 +205,7 @@
     </mat-card-actions>
 </mat-card>
 
-<mat-card class="example-card">
+<mat-card class="example-card col">
     <mat-card-header>
         <mat-card-title>Truck AMS</mat-card-title>
         <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
@@ -220,7 +220,7 @@
     </mat-card-actions>
 </mat-card>
 
-<mat-card class="example-card">
+<mat-card class="example-card col">
     <mat-card-header>
         <mat-card-title>Trucking</mat-card-title>
         <mat-card-subtitle>Air Automated Manifest System</mat-card-subtitle>
