--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,11 +1,28 @@
 <h1>ANA Link, Ltd</h1>
+
+<mat-toolbar color="primary">
+  <h3>Menu</h3>
+  <button
+    type="button"
+    aria-label="Toggle sidenav"
+    mat-icon-button
+    (click)="drawer.toggle()"
+    *ngIf="isHandset$ | async">
+    <mat-icon aria-label="Side nav toggle icon" >menu</mat-icon>
+  </button>
+  <span>angularAdmin-first</span>
+
+  <span class="toolbar-filler"></span>
+  <button id="button-logout" md-button>Log Out</button>
+</mat-toolbar>
+
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
 
-    <mat-toolbar>Menu</mat-toolbar>
+
     <mat-nav-list *ngFor = 'let menu of menuItem' [ngStyle]="{'padding-left': '10px'}" >
       <a mat-list-item routerLink="{{menu.route}}" >{{menu.label}}</a>
 
@@ -16,20 +33,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
 
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>angularAdmin-first</span>
 
-      <span class="toolbar-filler"></span>
-      <button id="button-logout" md-button>Log Out</button>
-    </mat-toolbar>
     <!-- Add Content Here -->
     <app-pages></app-pages>
     <router-outlet></router-outlet>
