--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,13 +1,28 @@
 .sidenav-container {
-  height: 100%;
+  position: absolute;
+  top: 200px;
+  bottom: 60px;
+  left: 0;
+  right: 0;
 }
 
 .sidenav {
   width: 200px;
+  margin-top: 200px;
+  background-color: lightskyblue;
+  a:hover {
+    color:lime
+  }
+
+  a:visited {
+    color: green
+  }
+
 }
 
 .sidenav .mat-toolbar {
   background: inherit;
+
 }
 
 .mat-toolbar.mat-primary {
@@ -26,6 +41,7 @@
   flex-direction: column;
   outline: none;
   width: 100%;
+  background-color: lightseagreen;
 
   .mat-list-item.active {
     background-color: yellowgreen;
@@ -51,4 +67,9 @@
 h1 {
   margin: auto;
   font-weight: bolder;
+}
+
+.a {
+  border-radius: 5px;
+  margin: 0 8px;
 }
