--- a/src/app/pages/ocean-import/ocean-import.component.html
+++ b/src/app/pages/ocean-import/ocean-import.component.html
@@ -7,4 +7,4 @@
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link">Link</button>
+<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
