--- a/src/app/pages/parties/parties.component.html
+++ b/src/app/pages/parties/parties.component.html
@@ -1,10 +1,18 @@
 <h1 style="max-width: 100%; max-height: 100%">Parties Works</h1>
 
 <mat-tab-group mat-align-tabs="start">
-  <mat-tab label="First">Content 1</mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+  <mat-tab label="Carriers">
+    <app-carriers></app-carriers>
+  </mat-tab>
+
+  <mat-tab label="Clients">
+    <app-clients></app-clients>
+  </mat-tab>
+
+  <mat-tab label="Vendors">
+    <app-vendors></app-vendors>
+  </mat-tab>
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link">Link</button>
+<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
