--- a/src/app/pages/air-ams/air-ams.component.scss
+++ b/src/app/pages/air-ams/air-ams.component.scss
@@ -14,3 +14,17 @@ div.container > div {
   width: 200px;
   background-color: blue;
 }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+mat-form-field {
+  margin-right: 12px;
+}
