Updated air export component

--- a/src/app/pages/air-export/air-export.component.html
+++ b/src/app/pages/air-export/air-export.component.html
@@ -1,9 +1,128 @@
 <h1 style="max-width: 100%; max-height: 100%">Air Export Works</h1>
 
 <mat-tab-group mat-align-tabs="start">
-  <mat-tab label="First">Content 1</mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+  <mat-tab label="First">
+    <div>
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label >
+        <input type="eamil" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>UserName</mat-label>
+        <input type="text" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input type="text" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Export Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Loadinig Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field  appearance="fill">
+        <mat-label>Import Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Arrival Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Entry Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Presentation Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Entry Summary Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+    </div>
+  </mat-tab>
+  <mat-tab label="Second">
+    <table>
+      <tr>
+        <th>Company</th>
+        <th>Contact</th>
+        <th>Country</th>
+      </tr>
+      <tr>
+        <td>Alfreds Futterkiste</td>
+        <td>Maria Anders</td>
+        <td>Germany</td>
+      </tr>
+      <tr>
+        <td>Centro comercial Moctezuma</td>
+        <td>Francisco Chang</td>
+        <td>Mexico</td>
+      </tr>
+      <tr>
+        <td>Ernst Handel</td>
+        <td>Roland Mendel</td>
+        <td>Austria</td>
+      </tr>
+      <tr>
+        <td>Island Trading</td>
+        <td>Helen Bennett</td>
+        <td>UK</td>
+      </tr>
+      <tr>
+        <td>Laughing Bacchus Winecellars</td>
+        <td>Yoshi Tannamuri</td>
+        <td>Canada</td>
+      </tr>
+      <tr>
+        <td>Magazzini Alimentari Riuniti</td>
+        <td>Giovanni Rovelli</td>
+        <td>Italy</td>
+      </tr>
+    </table>  
+  </mat-tab>
+  <mat-tab label="Third">
+    <table>
+      <tr>
+        <th>Company</th>
+        <th>Contact</th>
+        <th>Country</th>
+      </tr>
+      <tr>
+        <td>Alfreds Futterkiste</td>
+        <td>Maria Anders</td>
+        <td>Germany</td>
+      </tr>
+      <tr>
+        <td>Centro comercial Moctezuma</td>
+        <td>Francisco Chang</td>
+        <td>Mexico</td>
+      </tr>
+      <tr>
+        <td>Ernst Handel</td>
+        <td>Roland Mendel</td>
+        <td>Austria</td>
+      </tr>
+      <tr>
+        <td>Island Trading</td>
+        <td>Helen Bennett</td>
+        <td>UK</td>
+      </tr>
+      <tr>
+        <td>Laughing Bacchus Winecellars</td>
+        <td>Yoshi Tannamuri</td>
+        <td>Canada</td>
+      </tr>
+      <tr>
+        <td>Magazzini Alimentari Riuniti</td>
+        <td>Giovanni Rovelli</td>
+        <td>Italy</td>
+      </tr>
+    </table>  
+    </mat-tab>
 </mat-tab-group>
 
 
