--- a/src/app/layouts/vertical/vertical.component.html
+++ b/src/app/layouts/vertical/vertical.component.html
@@ -7,6 +7,11 @@
 
   <div class="main-content">
     <div class="page-content">
+      <button mat-raised-button color="primary" routerLink="/pages/airAms" routerLinkActive="active">Air AMS</button>
+      <button mat-raised-button color="accent" routerLink="/pages/airExport" routerLinkActive="active">Air Export</button>
+      <button mat-raised-button color="warn" routerLink="/pages/airImport" routerLinkActive="active">Air Import</button>
+      <button mat-raised-button color="primary" routerLink="/pages/cmsq" routerLinkActive="active">CMSQ</button>
+      <h1>Below is the content by selecting a route</h1>
       <router-outlet></router-outlet>
     </div>
   </div>
