updated nav component

--- a/src/app/home/sidenav/sidenav.component.html
+++ b/src/app/home/sidenav/sidenav.component.html
@@ -12,8 +12,19 @@
   <a mat-list-item routerLinkActive="list-item-active" routerLink="/pages/parties/">
     <mat-icon>dashboard</mat-icon> Parties
   </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 3 </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 4 </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 5 </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 6 </a>
+
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/pages/airExport/">
+    <mat-icon>info</mat-icon> Air Export
+  </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/pages/airImport/">
+    <mat-icon>face</mat-icon> Air Import
+  </a>
+
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/pages/cmsq/">
+    <mat-icon>language</mat-icon> CMSQ
+  </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/pages/tables/">
+    <mat-icon>question_answer</mat-icon> Tables
+  </a>
+
 </mat-nav-list>
