--- a/src/app/pages/air-ams/air-ams.component.html
+++ b/src/app/pages/air-ams/air-ams.component.html
@@ -48,7 +48,7 @@
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-     
+
     </form>
   </mat-tab>
 
@@ -100,8 +100,8 @@
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-     
-// Dates
+
+<h1>Dates</h1>
   <mat-form-field appearance="fill">
     <mat-label>Angular forms</mat-label>
     <input matInput [matDatepicker]="picker1" [formControl]="date">
@@ -126,32 +126,32 @@
 
   <mat-divider>
     <mat-form-field appearance="fill">
-      <mat-label>Angular forms</mat-label>
+      <mat-label>Import Date</mat-label>
       <input matInput [matDatepicker]="picker4" [formControl]="date">
       <mat-datepicker-toggle matSuffix [for]="picker4"></mat-datepicker-toggle>
       <mat-datepicker #picker4></mat-datepicker>
     </mat-form-field>
-    
+
     <mat-form-field appearance="fill">
-      <mat-label>Angular forms (w/ deserialization)</mat-label>
+      <mat-label>Arrival Date)</mat-label>
       <input matInput [matDatepicker]="picker5"
              [formControl]="serializedDate">
       <mat-datepicker-toggle matSuffix [for]="picker5"></mat-datepicker-toggle>
       <mat-datepicker #picker5></mat-datepicker>
     </mat-form-field>
-    
+
     <mat-form-field appearance="fill">
-      <mat-label>Value binding</mat-label>
+      <mat-label>Entry Date</mat-label>
       <input matInput [matDatepicker]="picker6" [value]="date.value">
       <mat-datepicker-toggle matSuffix [for]="picker6"></mat-datepicker-toggle>
       <mat-datepicker #picker6></mat-datepicker>
     </mat-form-field>
-    
+
   </mat-divider>
-    </form>
-    
+</form>
+
   </mat-tab>
-  
+
   <mat-tab label="Third" >
     <form class="example-form">
 
@@ -216,7 +216,7 @@
                 </mat-option>
               </mat-autocomplete>
             </mat-form-field>
-      
+
               <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Number</mat-label>
                 <input type="text"
@@ -231,7 +231,7 @@
                   </mat-option>
                 </mat-autocomplete>
               </mat-form-field>
-      
+
                 <mat-form-field class="example-full-width" appearance="fill">
                   <mat-label>Number</mat-label>
                   <input type="text"
@@ -246,9 +246,9 @@
                     </mat-option>
                   </mat-autocomplete>
                 </mat-form-field>
-           
+
           </form>
-     
+
     </form>
     </mat-tab>
 
