--- a/src/app/pages/air-export/air-export.component.html
+++ b/src/app/pages/air-export/air-export.component.html
@@ -43,7 +43,51 @@
         <mat-label>Entry Summary Date</mat-label>
         <input type="date" matInput >
       </mat-form-field>
+      <mat-divider></mat-divider>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label >
+        <input type="eamil" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>UserName</mat-label>
+        <input type="text" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input type="text" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Export Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Loadinig Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field  appearance="fill">
+        <mat-label>Import Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Arrival Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Entry Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Presentation Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Entry Summary Date</mat-label>
+        <input type="date" matInput >
+      </mat-form-field>
+
     </div>
+    <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
   </mat-tab>
   <mat-tab label="Second">
     <table>
@@ -82,7 +126,7 @@
         <td>Giovanni Rovelli</td>
         <td>Italy</td>
       </tr>
-    </table>  
+    </table>
   </mat-tab>
   <mat-tab label="Third">
     <table>
@@ -121,7 +165,7 @@
         <td>Giovanni Rovelli</td>
         <td>Italy</td>
       </tr>
-    </table>  
+    </table>
     </mat-tab>
 </mat-tab-group>
 
