--- a/src/app/pages/sea-ams/sea-ams.component.html
+++ b/src/app/pages/sea-ams/sea-ams.component.html
@@ -1,2 +1,10 @@
-
-<p>sea-ams works!</p>
+<h1>Sea AMS </h1>
+<nav>
+  <a routerLink="entry" routerLinkActive="active">Entry List</a>
+  <a routerLink="liquidation" routerLinkActive="active">Liquidation</a>
+  <a routerLink="exam" routerLinkActive="active">Exam Report</a>
+  <a routerLink="pnlbyImporter" routerLinkActive="active">Profit and Loss By Importer</a>
+  <a routerLink="pnlbySalesman" routerLinkActive="active">Profit and Loss by Salesman</a>
+  <a routerLink="pnlbyCustomer" routerLinkActive="active">Profit and Loss by Customer</a>
+</nav>
+<router-outlet></router-outlet>
