--- a/src/app/pages/trucking/trucking.component.html
+++ b/src/app/pages/trucking/trucking.component.html
@@ -1,1 +1,7 @@
-<p>trucking works!</p>
+<h1>Trucking Dashboard </h1>
+<nav>
+  <a routerLink="air" routerLinkActive="active">Air Delivery</a>
+  <a routerLink="lcl" routerLinkActive="active">LCL Delivery</a>
+  <a routerLink="fcl" routerLinkActive="active">FCL Delivery</a>
+</nav>
+<router-outlet></router-outlet>
