--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
 .sidenav-container {
   position: absolute;
-  top: 200px;
+  top: 100px;
   bottom: 60px;
   left: 0;
   right: 0;
@@ -8,7 +8,7 @@
 
 .sidenav {
   width: 200px;
-  margin-top: 200px;
+  margin-top: 100px;
   background-color: lightskyblue;
   a:hover {
     color:lime
@@ -54,7 +54,7 @@
   }
 }
 
-.mat-list-item {
+.mat-menu-item {
   padding: 8px 0;
   display: flex;
   width: auto;
