--- a/src/app/pages/air-ams/air-ams.component.scss
+++ b/src/app/pages/air-ams/air-ams.component.scss
@@ -17,8 +17,8 @@ div.container > div {
 
 .example-form {
   min-width: 150px;
-  max-width: 500px;
   width: 100%;
+  height: 80%;
 }
 
 .example-full-width {
