--- a/src/app/pages/isf/isf.component.html
+++ b/src/app/pages/isf/isf.component.html
@@ -1,9 +1,15 @@
 <h1 style="max-width: 100%; max-height: 100%">ISF Works</h1>
 
 <mat-tab-group mat-align-tabs="start">
-  <mat-tab label="First">Content 1</mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+  <mat-tab label="Shipment Information">
+    <app-shipment></app-shipment>
+  </mat-tab>
+  <mat-tab label="Related Parties">
+    <app-parties></app-parties>
+  </mat-tab>
+  <mat-tab label="HTS Info">
+    <app-hts></app-hts>
+  </mat-tab>
 </mat-tab-group>
 
 
