--- a/src/app/pages/ocean-export/ocean-export.component.html
+++ b/src/app/pages/ocean-export/ocean-export.component.html
@@ -1,4 +1,4 @@
-<<h1 style="max-width: 100%; max-height: 100%">Ocean Export Works</h1>
+<h1 style="max-width: 100%; max-height: 100%">Ocean Export Works</h1>
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="First">Content 1</mat-tab>
