--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -10,3 +10,83 @@
     max-width: 300px;
     border: 10px;
   }
+
+  .sidenav-container {
+    position: absolute;
+    top: 100px;
+    bottom: 60px;
+    left: 0;
+    right: 0;
+  }
+
+  .sidenav {
+    width: 200px;
+    margin-top: 100px;
+    background-color: lightskyblue;
+    a:hover {
+      color:lime
+    }
+
+    a:visited {
+      color: green
+    }
+
+  }
+
+  .sidenav .mat-toolbar {
+    background: inherit;
+
+  }
+
+  .mat-toolbar.mat-primary {
+    position: sticky;
+    top: 0;
+    z-index: 0;
+  }
+
+  .toolbar-filler {
+    flex: 1 1 auto
+  }
+
+
+  :host {
+    display: flex;
+    flex-direction: column;
+    outline: none;
+    width: 100%;
+    background-color: lightseagreen;
+
+    .mat-list-item.active {
+      background-color: yellowgreen;
+    }
+    &:hover,
+    &:focus {
+      >.mat-list-item:not(.expanded) {
+        background-color: ivory;
+      }
+    }
+  }
+
+  .mat-list-item {
+    padding: 8px 0;
+    display: flex;
+    width: auto;
+
+    .routeIcon {
+      margin-right: 40px;
+    }
+  }
+
+  h1 {
+    margin: auto;
+    font-weight: bolder;
+  }
+
+  .a {
+    border-radius: 5px;
+    margin: 0 8px;
+  }
+
+  .example-spacer {
+    flex: 1 1 auto;
+  }
