--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -1,1 +1,16 @@
-<p>tables works!</p>
+<h1>Tables </h1>
+<nav>
+  <a routerLink="carriers" routerLinkActive="active">Carriers</a>
+  <a routerLink="ports" routerLinkActive="active">Ports</a>
+  <a routerLink="foreignPorts" routerLinkActive="active">Foreign Ports</a>
+  <a routerLink="country" routerLinkActive="active">Coutries</a>
+  <a routerLink="states" routerLinkActive="active">U.S. States</a>
+  <a routerLink="firms" routerLinkActive="active">FIRMS Codes</a>
+  <a routerLink="hts" routerLinkActive="active">U.S. Harmonized Tariffs Code</a>
+  <a routerLink="add-cvd" routerLinkActive="active">ADD CVD Cases</a>
+  <a routerLink="fdaProduct" routerLinkActive="active">FDA Product Codes</a>
+  <a routerLink="currency" routerLinkActive="active">Foreign Currency Tables</a>
+  <a routerLink="vessel" routerLinkActive="active">Vessel Codes</a>
+  <a routerLink="products" routerLinkActive="active">Product Codes</a>
+</nav>
+<router-outlet></router-outlet>
