--- a/src/app/pages/isf/shipment/shipment.component.html
+++ b/src/app/pages/isf/shipment/shipment.component.html
@@ -1,6 +1,7 @@
 <h1>Shipment Info</h1>
+<div>
 
-  <table class="container-fluid example-full-width" >
+  <table class="container-fluid example-full-width" fxLayout="column" fxFlex="30" fxLayoutAlign="space-between start">
     <tr>
       <mat-form-field  appearance="fill">
         <mat-label>ISF No.</mat-label>
@@ -28,33 +29,298 @@
         </mat-radio-group>
     </tr>
 
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Shpt Type.</mat-label>
+        <input matInput id="ShptTyp" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Action</mat-label>
+        <input matInput id="Action" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>AMS B/L</mat-label>
+        <input matInput id="AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #1</mat-label>
+        <input matInput id="Add1AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #2</mat-label>
+        <input matInput id="Add2AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #3</mat-label>
+        <input matInput id="Add3AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #4</mat-label>
+        <input matInput id="Add4AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Master B/L #</mat-label>
+        <input matInput id="MasterBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>File No</mat-label>
+        <input matInput id="FileNo" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Customer Ref #</mat-label>
+        <input matInput id="CustRefNo" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Importer ID #</mat-label>
+        <input matInput id="ImporterID" type="text" >
+      </mat-form-field>
+    </tr>
+
   </table>
 
-  <p>
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Address</mat-label>
-      <textarea matInput placeholder="Ex. 100 Main St">1600 Amphitheatre Pkwy</textarea>
-    </mat-form-field>
-    <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Address 2</mat-label>
-      <textarea matInput></textarea>
-    </mat-form-field>
-  </p>
 
-  <table class="example-full-width" cellspacing="0"><tr>
-    <td><mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>City</mat-label>
-      <input matInput placeholder="Ex. San Francisco">
-    </mat-form-field></td>
-    <td><mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>State</mat-label>
-      <input matInput placeholder="Ex. California">
-    </mat-form-field></td>
-    <td><mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Postal Code</mat-label>
-      <input matInput #postalCode maxlength="5" placeholder="Ex. 94105" value="94043">
-      <mat-hint align="end">{{postalCode.value.length}} / 5</mat-hint>
-    </mat-form-field></td>
-  </tr>
+  <table class="container-fluid example-full-width" fxLayout="column" fxFlex="30">
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>ISF No.</mat-label>
+        <input matInput id="ISFNo" type="text" >
+      </mat-form-field>
+    </tr>
 
-</table>
+    <tr>
+
+      <mat-label>ISF Type</mat-label>
+      <mat-radio-group aria-label="Select an option">
+        <mat-radio-button value="1">ISF-10</mat-radio-button>
+        <mat-radio-button value="2">ISF-5</mat-radio-button>
+        <mat-radio-button value="3">ISF-5 to ISF-10</mat-radio-button>
+        <mat-radio-button value="4">ISF-10 to ISF-5</mat-radio-button>
+      </mat-radio-group>
+
+    </tr>
+
+    <tr>
+        <mat-label>MOT</mat-label>
+        <mat-radio-group aria-label="Select an option">
+          <mat-radio-button value="1">11 - Containerized</mat-radio-button>
+          <mat-radio-button value="2">10 - Breakbulk</mat-radio-button>
+        </mat-radio-group>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Shpt Type.</mat-label>
+        <input matInput id="ShptTyp" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Action</mat-label>
+        <input matInput id="Action" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>AMS B/L</mat-label>
+        <input matInput id="AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #1</mat-label>
+        <input matInput id="Add1AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #2</mat-label>
+        <input matInput id="Add2AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #3</mat-label>
+        <input matInput id="Add3AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #4</mat-label>
+        <input matInput id="Add4AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Master B/L #</mat-label>
+        <input matInput id="MasterBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>File No</mat-label>
+        <input matInput id="FileNo" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Customer Ref #</mat-label>
+        <input matInput id="CustRefNo" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Importer ID #</mat-label>
+        <input matInput id="ImporterID" type="text" >
+      </mat-form-field>
+    </tr>
+
+  </table>
+
+
+  <table class="container-fluid example-full-width" fxLayout="column" fxFlex="30">
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>ISF No.</mat-label>
+        <input matInput id="ISFNo" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+
+      <mat-label>ISF Type</mat-label>
+      <mat-radio-group aria-label="Select an option">
+        <mat-radio-button value="1">ISF-10</mat-radio-button>
+        <mat-radio-button value="2">ISF-5</mat-radio-button>
+        <mat-radio-button value="3">ISF-5 to ISF-10</mat-radio-button>
+        <mat-radio-button value="4">ISF-10 to ISF-5</mat-radio-button>
+      </mat-radio-group>
+
+    </tr>
+
+    <tr>
+        <mat-label>MOT</mat-label>
+        <mat-radio-group aria-label="Select an option">
+          <mat-radio-button value="1">11 - Containerized</mat-radio-button>
+          <mat-radio-button value="2">10 - Breakbulk</mat-radio-button>
+        </mat-radio-group>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Shpt Type.</mat-label>
+        <input matInput id="ShptTyp" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Action</mat-label>
+        <input matInput id="Action" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>AMS B/L</mat-label>
+        <input matInput id="AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #1</mat-label>
+        <input matInput id="Add1AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #2</mat-label>
+        <input matInput id="Add2AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #3</mat-label>
+        <input matInput id="Add3AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Add'l AMS B/L #4</mat-label>
+        <input matInput id="Add4AmsBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Master B/L #</mat-label>
+        <input matInput id="MasterBL" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>File No</mat-label>
+        <input matInput id="FileNo" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Customer Ref #</mat-label>
+        <input matInput id="CustRefNo" type="text" >
+      </mat-form-field>
+    </tr>
+
+    <tr>
+      <mat-form-field  appearance="fill">
+        <mat-label>Importer ID #</mat-label>
+        <input matInput id="ImporterID" type="text" >
+      </mat-form-field>
+    </tr>
+
+  </table>
+</div>
